2008-07-17  Ivan Frade  <ivan.frade@nokia.com>
	
	* src/libtracker-common/tracker-ontology.[ch]:
	(tracker_ontology_registered_service_types)
	(tracker_ontology_registered_field_types): new functions to obtain
	services and field type names registered in the ontology.
	
	* src/trackerd/tracker-metadata.c: 
	(tracker_metadata_get_registered_types)
	(tracker_metadata_get_registered_classes): Use the new functions
	instead accessing to the DB.
	
	* tests/libtracker-common/tracker-ontology-test.c: Tests for the
	new methods.
	
2008-07-17  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c:
	* src/trackerd/tracker-processor.c:
	* src/trackerd/tracker-main.c: Initialize module config before
	initializing the monitor module. The monitor module uses the
	module config to set up queues and hash tables.
	
	* src/trackerd/tracker-monitor.[ch]: Make all API calls require a
	module name. This is because now we have separate queues for each
	module and 3 queues for each type of event (created, updated,
	deleted). This means we now don't just send "Files" as the service
	type when telling the indexer about monitor events.

2008-07-17  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-search.c:
	* data/dbus/tracker-search.xml:

	Async search API.

2008-07-17  Ivan Frade  <ivan.frade@nokia.com>
	
	* data/dbus/tracker-files.xml
	* src/trackerd/tracker-files.[ch]:

	Async files API.

2008-07-17  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-log.[ch]: Cleaned up the code here
	a bit and only open the file descriptor on init and close on
	shutdown, instead of once per write. This should fix the error we
	get when we can't open the file because too many files are already
	open. It should also be marginally quicker. If we can't open the
	file, we print everything to stderr too now.

2008-07-17  Ivan Frade  <ivan.frade@nokia.com>
	
	* data/dbus/tracker-metadata.xml
	* src/trackerd/tracker-metadata.[ch]:
	Async metadata API.
	